--- a/Riskvalve/Views/Tool/ImportAssessment.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssessment.cshtml
@@ -14,25 +14,28 @@
             <div class="content-container">
                 <div class="row">
                     <div class="col-md-6" style="padding-left:20px;">
-                        <form>
+                        <form id="assessment-form">
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
-                                    Download the template file <a href="/Uploads/Downloads/AssessmentTemplate.xlsx" target="_blank">here</a>
+                                    Download the template file <a href="/Uploads/Downloads/AssessmentTemplate.xlsx"
+                                        target="_blank">here</a>
                                 </div>
                             </div>
-                            <br/>
+                            <br />
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
                                     <label for="fileUpload" class="col-form-label">File: </label>
                                 </div>
                                 <div class="col">
+                                    <input type="hidden" id="mode" name="mode" value="assessment" />
                                     <input type="file" id="fileUpload" class="form-control">
                                 </div>
                             </div>
                             <br />
                             <div class="row g-3 align-items-center">
                                 <div class="col">
-                                    <button type="submit" class="btn btn-outline-primary" style="width: 100%;">Import File</button>
+                                    <button type="submit" class="btn btn-outline-primary" style="width: 100%;">Import
+                                        File</button>
                                 </div>
                             </div>
                         </form>
@@ -43,6 +46,34 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $("#assessment-form").submit(function (e) {
+                e.preventDefault();
+                var formData = new FormData();
+                formData.append("file", $("#fileUpload")[0].files[0]);
+                formData.append("mode", $("#mode").val());
+                $.ajax({
+                    url: "/Tool/ImportExcelFile",
+                    type: "POST",
+                    data: formData,
+                    contentType: false,
+                    processData: false,
+                    success: function (data) {
+                        bootbox.alert(data.message, function () {
+                            $("#fileUpload").val('');
+                            location.reload();
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        alert('Error submitting the form')
+                    }
+                });
+            });
+        });
+    </script>
+}
 @* <div class="row">
 <div class="col-xs-2" style="padding-right:0;">
 <partial name="ToolSidebar" />
