--- a/Riskvalve/Views/Assessment/Index.cshtml
+++ b/Riskvalve/Views/Assessment/Index.cshtml
@@ -766,19 +766,25 @@
                                             <div class="card-header">
                                                 Risk
                                             </div>
-                                            <input type="hidden" name='consequenceOfFailure' id="consequenceOfFailure" />
-                                            <input type="hidden" name='tP1A' id="tP1A" />
-                                            <input type="hidden" name='tP2A' id="tP2A" />
-                                            <input type="hidden" name='tP3A' id="tP3A" />
-                                            <input type="hidden" name='tP1B' id="tP1B" />
-                                            <input type="hidden" name='tP2B' id="tP2B" />
-                                            <input type="hidden" name='tP3B' id="tP3B" />
-                                            <input type="hidden" name='tP1C' id="tP1C" />
-                                            <input type="hidden" name='tP2C' id="tP2C" />
-                                            <input type="hidden" name='tP3C' id="tP3C" />
-                                            <input type="hidden" name='tpTimeToActionA' id="tpTimeToActionA" />
-                                            <input type="hidden" name='tpTimeToActionB' id="tpTimeToActionB" />
-                                            <input type="hidden" name='tpTimeToActionC' id="tpTimeToActionC" />
+
+                                            <input type="hidden" name='ConsequenceOfFailure' id="consequenceOfFailure" />
+                                            <input type="hidden" name='TP1A' id="TP1A-field" />
+                                            <input type="hidden" name='TP2A' id="TP2A-field" />
+                                            <input type="hidden" name='TP3A' id="TP3A-field" />
+                                            <input type="hidden" name='TP1B' id="TP1B-field" />
+                                            <input type="hidden" name='TP2B' id="TP2B-field" />
+                                            <input type="hidden" name='TP3B' id="TP3B-field" />
+                                            <input type="hidden" name='TP1C' id="TP1C-field" />
+                                            <input type="hidden" name='TP2C' id="TP2C-field" />
+                                            <input type="hidden" name='TP3C' id="TP3C-field" />
+                                            <input type="hidden" name='TPTimeToActionA' id="TPA-TTA-field" />
+                                            <input type="hidden" name='TPTimeToActionB' id="TPB-TTA-field" />
+                                            <input type="hidden" name='TPTimeToActionC' id="TPC-TTA-field" />
+                                            <input type="hidden" name='TP1Risk' id="TP1RISK-field" />
+                                            <input type="hidden" name='TP2Risk' id="TP2RISK-field" />
+                                            <input type="hidden" name='TP3Risk' id="TP3RISK-field" />
+                                            <input type="hidden" name="TPTimeToActionRisk" id="TPRISK-TTA-field" />
+
                                             <div class="card-content">
                                                 <div class="row">
                                                     <div class="col-lg-8">
@@ -2189,7 +2195,11 @@
                     dotColorLabel.removeClass()
                     dotColorLabel.addClass('status-box')
                     dotColorLabel.addClass(item.color)
+
+                    $('.tab-pane[tab-num='+ctr+']').find('#'+key+'-field').val(item.label)
                 }
+                // set cof
+                $('.tab-pane[tab-num='+ctr+']').find('#consequenceOfFailure').val(cof)
 
                 // Risk
                 var tp1risk = Math.max(tpos1a_lof, tpos2a_lof, tpos3a_lof) + cof;
@@ -2209,8 +2219,9 @@
                         'color' : getHeatColor(tp3risk)
                     }
                 }
-                console.log(map_risk);
-                // apply to matrix
+                console.log(map_risk, 'map_risk');
+
+                // apply to matrix map_risk
                 for (const [key, item] of Object.entries(map_risk)) {
                     const dotLabel = $('.tab-pane[tab-num='+ctr+']').find('['+key+'-label]')
                     dotLabel.text(item.label)
@@ -2219,7 +2230,10 @@
                     dotColorLabel.removeClass()
                     dotColorLabel.addClass('status-box')
                     dotColorLabel.addClass(item.color)
+
+                    $('.tab-pane[tab-num='+ctr+']').find('#'+key+'-field').val(item.label)
                 }
+
                 // Time to Limit
                 var minvaltp1 = timePeriod*1;
                 var minvaltp2 = timePeriod*2;
@@ -2240,16 +2254,18 @@
                     'TPC-TTA': formatDate(ttlc_date),
                     'TPRISK-TTA': formatDate(new Date(Math.min(ttla_date.getTime(), ttlb_date.getTime(), ttlc_date.getTime()))),
                 };
-                console.log(map_ttl);
+                console.log(map_ttl, 'map_ttl');
                 // apply
                 for (const [key, item] of Object.entries(map_ttl)) {
                     const dotLabel = $('.tab-pane[tab-num='+ctr+']').find('['+key+']')
                     dotLabel.text(item)
+                    $('.tab-pane[tab-num='+ctr+']').find('#'+key+'-field').val(item)
                 }
                 $('#time-to-action' + ctr).val(map_ttl['TPRISK-TTA']);
             }
 
             function decideTTL(tp1, tp2, tp3, tp1val, tp2val, tp3val){
+                /*
                 console.log("==START DECIDE TTL==");
                 console.log("TP1: "+tp1);
                 console.log("TP2: "+tp2);
@@ -2258,6 +2274,7 @@
                 console.log("TP2VAL: "+tp2val);
                 console.log("TP3VAL: "+tp3val);
                 console.log("==END DECIDE TTL==");
+                */
                 if(tp1 == 1 && tp2 == 1 && tp3 == 1) {
                     return tp3val;
                 } else if(tp1 == 1 && tp2 == 1 && tp3 == 2) {
@@ -2567,7 +2584,6 @@
 
                 // fill LF1 and LF3
                 const latestData = data.at(-1) || {}
-                console.log('ayaya')
                 gLastInspectionDate = latestData.inspectionDate
                 $('#leakage-to-atmosphere'+tabNum).val(latestData.currentConditionLeakeageToAtmosphereID)
                 $('#failure-of-function'+tabNum).val(latestData.currentConditionFailureOfFunctionID)
